# ForgeMind-AI-Suite

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
src/: __init__.py  main.py
src/agents/: __init__.py
src/agents/demand_planning/: __init__.py  agent.py
src/agents/digital_twin/: __init__.py  agent.py
src/agents/energy_optimization/: __init__.py  agent.py
src/agents/inventory_forecasting/: __init__.py  agent.py
src/agents/predictive_maintenance/: __init__.py  router.py  schemas.py  service.py
src/agents/process_analyzer/: __init__.py  agent.py
src/agents/production_scheduler/: __init__.py  router.py  schemas.py  service.py
src/agents/reporting/: __init__.py  agent.py
src/agents/root_cause_analysis/: __init__.py  agent.py
src/agents/supplier_performance/: __init__.py  agent.py
src/agents/supply_risk/: __init__.py  router.py  schemas.py  service.py
src/agents/vision_qc/: __init__.py  router.py  schemas.py  service.py
src/agents/waste_reduction/: __init__.py  agent.py
src/agents/worker_safety/: __init__.py  agent.py
src/core/: __init__.py  auth.py  cache.py  config.py  database.py  kafka_manager.py  mqtt_manager.py  observability.py  opcua_client.py
tests/: test_agents.py
